# docmind

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml
config/: config.example.yaml
data/: docmind.db-shm  docmind.db-wal
docs/: design-phase4bc.md  design-phase5b.md  gap-analysis.md  openapi.yaml  phase6-gap-analysis.md  research-phase7-competitive-landscape.md  research-phase8-direction.md  research-phase9-competitive-audit.md  research-stop-condition-2nd-assessment.md  responsive-validation-report.md
docs/architecture/: caching.md  email-ingestion.md  rate-limiting.md
docs/testing/: js-islands-testing-strategy.md
src/: __init__.py  errors.py  hermes_plugin.py  logging_config.py  validation.py
src/cli/: formatters.py  main.py  services.py
src/core/: __init__.py  cache.py  chunking.py  config.py  crypto.py  db.py  db_sqlite.py  detector.py  email_ingestor.py  (+12 more)
tests/: __init__.py  conftest.py  test_acceptance_15_criteria.py  test_acceptance_3layer.py  test_analytics.py  test_auth.py  test_base_components.py  test_base_page_transitions.py  test_bulk_operations.py  test_cache.py  test_chat.py  test_chat_llm.py  test_chunking.py  test_collection_breadcrumbs.py  test_collection_detail.py  test_collection_tree_sidebar.py  test_collections.py  test_collections_api.py  test_collections_management.py  test_composite_indexes.py  test_css_migration_verification.py  test_css_tokens.py  test_css_transitions.py  test_css_transitions_extended.py  test_db_sqlite.py  test_detector.py  test_document_collection_assignment.py  test_document_viewer.py  test_email_edge_cases.py  test_email_encryption.py  test_email_ingestion.py  test_email_ingestor.py  test_email_integration.py  test_email_phase8a_verification.py  test_email_ui.py  test_embeddings.py  test_export.py  test_extractor.py  test_extractor_ocr.py  test_faceted_search.py  (+35 more)
(+85 files in other folders)
